# pc-ble-driver-py

./: .gitignore  CMakeLists.txt  build-pc-ble-driver.bat  build-pc-ble-driver.sh  pyproject.toml  setup.py
.github/workflows/: build.yml
python/pc_ble_driver_py/: ble_adapter.py  ble_driver.py  config.py  nrf_driver.py  nrf_event.py  nrf_types.py  observers.py
python/pc_ble_driver_py/examples/: advertising.py
tools/: macos_retarget_pc_ble_driver_py.sh
