[build-system]
requires = [
    "setuptools",
    "wheel",
    "scikit-build",
    "cmake",
    "swig",
    "ninja",
    "tox"
]

[flake8]
exclude = [
    "hex",
    "__pycache__",
    "lib"
]

[tool.cibuildwheel]
build-verbosity = 1
build = [
    "cp39-manylinux_x86_64",
    # "cp39-manylinux_aarch64",
    "cp39-macosx_x86_64",
    "cp39-macosx_arm64",
    "cp39-win_amd64",

    "cp310-manylinux_x86_64",
    # "cp310-manylinux_aarch64",
    "cp310-macosx_x86_64",
    "cp310-macosx_arm64",
    "cp310-win_amd64",

    "cp311-manylinux_x86_64",
    # "cp311-manylinux_aarch64",
    "cp311-macosx_x86_64",
    "cp311-macosx_arm64",
    "cp311-win_amd64",

    "cp312-manylinux_x86_64",
    # "cp312-manylinux_aarch64",
    "cp312-macosx_x86_64",
    "cp312-macosx_arm64",
    "cp312-win_amd64",
]
test-command = "python -X faulthandler -c \"from pc_ble_driver_py import config; config.__conn_ic_id__ = 'NRF52'; from pc_ble_driver_py import ble_driver; print('OK')\""

[tool.cibuildwheel.macos]
repair-wheel-command = ""

[tool.cibuildwheel.environment]
VCPKG_FORCE_SYSTEM_BINARIES = 1   # Required for aarch64 builds
NRF_BLE_DRIVER_VERSION = "4.1.100"
CMAKE_ARGS = "-DCMAKE_PREFIX_PATH=pc-ble-driver/install --log-level=TRACE"

[[tool.cibuildwheel.overrides]]
select = "*-macosx_arm64"
inherit.environment = "append"
environment.PC_BLE_DRIVER_ARCH = "-DARCH=arm64"

[[tool.cibuildwheel.overrides]]
select = "*-manylinux_*"
inherit.before-all = "append"
before-all = [
    "ulimit -n 1024000", # Makes yum faster: https://github.com/docker/buildx/issues/379
    "yum install -y zip systemd-devel",
]


[[tool.cibuildwheel.overrides]]
select = "*-{macosx,manylinux}_*"
inherit.before-all = "append"
before-all = [
    "./build-pc-ble-driver.sh",
]

[[tool.cibuildwheel.overrides]]
select = "*-win_*"
inherit.before-all = "append"
before-all = [
    "build-pc-ble-driver.bat",
]
